--- a/ansible-book-training/ansible.cfg
+++ b/ansible-book-training/ansible.cfg
@@ -1,12 +1,15 @@
 [defaults]
-remote_user = ansible; 
-inventory = $HOME/ansible-book-training/inventory ; 
+remote_user = ansible ; 
+inventory = /home/tux/Ansible-Course/ansible-book-training/inventory ; 
+host_key_checking = false ;
 
 [inventory]
-[privilege_escalation]
-become = true ; user rights will be elevated
 
+[privilege_escalation]
+#become = true ; user rights will be elevated
+become = false ;
 become_method = sudo ; by using sudo
+#become_user = root ;
 
 [paramiko_connection]
 [ssh_connection]
